Week3_Assignment1/Grammer/ST_Combined/gen/STLanguageParser.cpp

// Generated from C:/Users/Tomonobu/Documents/home/Keyence/Antlr/ANTLRProject/Week3_Assignment1/Grammer/ST_Combined\STLanguage.g4 by ANTLR 4.7.2


#include "STLanguageListener.h"
#include "STLanguageVisitor.h"

#include "STLanguageParser.h"


using namespace antlrcpp;
using namespace antlr4;

STLanguageParser::STLanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

STLanguageParser::~STLanguageParser() {
  delete _interpreter;
}

std::string STLanguageParser::getGrammarFileName() const {
  return "STLanguage.g4";
}

const std::vector<std::string>& STLanguageParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& STLanguageParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InputContext ------------------------------------------------------------------

STLanguageParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::InputContext::EOF() {
  return getToken(STLanguageParser::EOF, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::InputContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::InputContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::InputContext::getRuleIndex() const {
  return STLanguageParser::RuleInput;
}

void STLanguageParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void STLanguageParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}


antlrcpp::Any STLanguageParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::InputContext* STLanguageParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 0, STLanguageParser::RuleInput);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::TOKEN_OPEN_BRACE)
      | (1ULL << STLanguageParser::TOKEN_HEX_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_DEC_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_OCT_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_BIN_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_PLUS)
      | (1ULL << STLanguageParser::TOKEN_MINUS)
      | (1ULL << STLanguageParser::STATEMENT_SEPARATOR)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0)) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(STLanguageParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

STLanguageParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

STLanguageParser::Return_statementContext* STLanguageParser::StatementContext::return_statement() {
  return getRuleContext<STLanguageParser::Return_statementContext>(0);
}

STLanguageParser::If_statementContext* STLanguageParser::StatementContext::if_statement() {
  return getRuleContext<STLanguageParser::If_statementContext>(0);
}

STLanguageParser::While_statementContext* STLanguageParser::StatementContext::while_statement() {
  return getRuleContext<STLanguageParser::While_statementContext>(0);
}

STLanguageParser::For_statementContext* STLanguageParser::StatementContext::for_statement() {
  return getRuleContext<STLanguageParser::For_statementContext>(0);
}

STLanguageParser::Repeat_statementContext* STLanguageParser::StatementContext::repeat_statement() {
  return getRuleContext<STLanguageParser::Repeat_statementContext>(0);
}

STLanguageParser::Case_statementContext* STLanguageParser::StatementContext::case_statement() {
  return getRuleContext<STLanguageParser::Case_statementContext>(0);
}

STLanguageParser::ExpressionContext* STLanguageParser::StatementContext::expression() {
  return getRuleContext<STLanguageParser::ExpressionContext>(0);
}

tree::TerminalNode* STLanguageParser::StatementContext::STATEMENT_SEPARATOR() {
  return getToken(STLanguageParser::STATEMENT_SEPARATOR, 0);
}


size_t STLanguageParser::StatementContext::getRuleIndex() const {
  return STLanguageParser::RuleStatement;
}

void STLanguageParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void STLanguageParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any STLanguageParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::StatementContext* STLanguageParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, STLanguageParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(64);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case STLanguageParser::TOKEN_RETURN: {
        enterOuterAlt(_localctx, 1);
        setState(54);
        return_statement();
        break;
      }

      case STLanguageParser::TOKEN_IF: {
        enterOuterAlt(_localctx, 2);
        setState(55);
        if_statement();
        break;
      }

      case STLanguageParser::TOKEN_WHILE: {
        enterOuterAlt(_localctx, 3);
        setState(56);
        while_statement();
        break;
      }

      case STLanguageParser::TOKEN_FOR: {
        enterOuterAlt(_localctx, 4);
        setState(57);
        for_statement();
        break;
      }

      case STLanguageParser::TOKEN_REPEAT: {
        enterOuterAlt(_localctx, 5);
        setState(58);
        repeat_statement();
        break;
      }

      case STLanguageParser::TOKEN_CASE: {
        enterOuterAlt(_localctx, 6);
        setState(59);
        case_statement();
        break;
      }

      case STLanguageParser::TOKEN_OPEN_BRACE:
      case STLanguageParser::TOKEN_HEX_NUMBER:
      case STLanguageParser::TOKEN_DEC_NUMBER:
      case STLanguageParser::TOKEN_OCT_NUMBER:
      case STLanguageParser::TOKEN_BIN_NUMBER:
      case STLanguageParser::TOKEN_PLUS:
      case STLanguageParser::TOKEN_MINUS:
      case STLanguageParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 7);
        setState(60);
        expression(0);
        setState(61);
        match(STLanguageParser::STATEMENT_SEPARATOR);
        break;
      }

      case STLanguageParser::STATEMENT_SEPARATOR: {
        enterOuterAlt(_localctx, 8);
        setState(63);
        match(STLanguageParser::STATEMENT_SEPARATOR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Return_statementContext ------------------------------------------------------------------

STLanguageParser::Return_statementContext::Return_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::Return_statementContext::TOKEN_RETURN() {
  return getToken(STLanguageParser::TOKEN_RETURN, 0);
}


size_t STLanguageParser::Return_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleReturn_statement;
}

void STLanguageParser::Return_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturn_statement(this);
}

void STLanguageParser::Return_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturn_statement(this);
}


antlrcpp::Any STLanguageParser::Return_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitReturn_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::Return_statementContext* STLanguageParser::return_statement() {
  Return_statementContext *_localctx = _tracker.createInstance<Return_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, STLanguageParser::RuleReturn_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(STLanguageParser::TOKEN_RETURN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

STLanguageParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_IF() {
  return getToken(STLanguageParser::TOKEN_IF, 0);
}

STLanguageParser::ExpressionContext* STLanguageParser::If_statementContext::expression() {
  return getRuleContext<STLanguageParser::ExpressionContext>(0);
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_IF_THEN() {
  return getToken(STLanguageParser::TOKEN_IF_THEN, 0);
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_IF_END() {
  return getToken(STLanguageParser::TOKEN_IF_END, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::If_statementContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::If_statementContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> STLanguageParser::If_statementContext::TOKEN_IF_ELIF() {
  return getTokens(STLanguageParser::TOKEN_IF_ELIF);
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_IF_ELIF(size_t i) {
  return getToken(STLanguageParser::TOKEN_IF_ELIF, i);
}

tree::TerminalNode* STLanguageParser::If_statementContext::TOKEN_ELSE() {
  return getToken(STLanguageParser::TOKEN_ELSE, 0);
}


size_t STLanguageParser::If_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleIf_statement;
}

void STLanguageParser::If_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement(this);
}

void STLanguageParser::If_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement(this);
}


antlrcpp::Any STLanguageParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::If_statementContext* STLanguageParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, STLanguageParser::RuleIf_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(STLanguageParser::TOKEN_IF);
    setState(69);
    expression(0);
    setState(70);
    match(STLanguageParser::TOKEN_IF_THEN);
    setState(72); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(71);
      statement();
      setState(74); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::TOKEN_OPEN_BRACE)
      | (1ULL << STLanguageParser::TOKEN_HEX_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_DEC_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_OCT_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_BIN_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_PLUS)
      | (1ULL << STLanguageParser::TOKEN_MINUS)
      | (1ULL << STLanguageParser::STATEMENT_SEPARATOR)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == STLanguageParser::TOKEN_IF_ELIF) {
      setState(76);
      match(STLanguageParser::TOKEN_IF_ELIF);
      setState(77);
      statement();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == STLanguageParser::TOKEN_ELSE) {
      setState(83);
      match(STLanguageParser::TOKEN_ELSE);
      setState(84);
      statement();
    }
    setState(87);
    match(STLanguageParser::TOKEN_IF_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_statementContext ------------------------------------------------------------------

STLanguageParser::While_statementContext::While_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::While_statementContext::TOKEN_WHILE() {
  return getToken(STLanguageParser::TOKEN_WHILE, 0);
}

STLanguageParser::ExpressionContext* STLanguageParser::While_statementContext::expression() {
  return getRuleContext<STLanguageParser::ExpressionContext>(0);
}

tree::TerminalNode* STLanguageParser::While_statementContext::TOKEN_DO() {
  return getToken(STLanguageParser::TOKEN_DO, 0);
}

tree::TerminalNode* STLanguageParser::While_statementContext::TOKEN_WHILE_END() {
  return getToken(STLanguageParser::TOKEN_WHILE_END, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::While_statementContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::While_statementContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::While_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleWhile_statement;
}

void STLanguageParser::While_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhile_statement(this);
}

void STLanguageParser::While_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhile_statement(this);
}


antlrcpp::Any STLanguageParser::While_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitWhile_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::While_statementContext* STLanguageParser::while_statement() {
  While_statementContext *_localctx = _tracker.createInstance<While_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, STLanguageParser::RuleWhile_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(STLanguageParser::TOKEN_WHILE);
    setState(90);
    expression(0);
    setState(91);
    match(STLanguageParser::TOKEN_DO);
    setState(93); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(92);
      statement();
      setState(95); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::TOKEN_OPEN_BRACE)
      | (1ULL << STLanguageParser::TOKEN_HEX_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_DEC_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_OCT_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_BIN_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_PLUS)
      | (1ULL << STLanguageParser::TOKEN_MINUS)
      | (1ULL << STLanguageParser::STATEMENT_SEPARATOR)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
    setState(97);
    match(STLanguageParser::TOKEN_WHILE_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- For_statementContext ------------------------------------------------------------------

STLanguageParser::For_statementContext::For_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::For_statementContext::TOKEN_FOR() {
  return getToken(STLanguageParser::TOKEN_FOR, 0);
}

std::vector<STLanguageParser::ExpressionContext *> STLanguageParser::For_statementContext::expression() {
  return getRuleContexts<STLanguageParser::ExpressionContext>();
}

STLanguageParser::ExpressionContext* STLanguageParser::For_statementContext::expression(size_t i) {
  return getRuleContext<STLanguageParser::ExpressionContext>(i);
}

tree::TerminalNode* STLanguageParser::For_statementContext::TOKEN_TO() {
  return getToken(STLanguageParser::TOKEN_TO, 0);
}

tree::TerminalNode* STLanguageParser::For_statementContext::TOKEN_DO() {
  return getToken(STLanguageParser::TOKEN_DO, 0);
}

tree::TerminalNode* STLanguageParser::For_statementContext::TOKEN_FOR_END() {
  return getToken(STLanguageParser::TOKEN_FOR_END, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::For_statementContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::For_statementContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::For_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleFor_statement;
}

void STLanguageParser::For_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFor_statement(this);
}

void STLanguageParser::For_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFor_statement(this);
}


antlrcpp::Any STLanguageParser::For_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitFor_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::For_statementContext* STLanguageParser::for_statement() {
  For_statementContext *_localctx = _tracker.createInstance<For_statementContext>(_ctx, getState());
  enterRule(_localctx, 10, STLanguageParser::RuleFor_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(STLanguageParser::TOKEN_FOR);
    setState(100);
    expression(0);
    setState(101);
    match(STLanguageParser::TOKEN_TO);
    setState(102);
    expression(0);
    setState(103);
    match(STLanguageParser::TOKEN_DO);
    setState(105); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(104);
      statement();
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::TOKEN_OPEN_BRACE)
      | (1ULL << STLanguageParser::TOKEN_HEX_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_DEC_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_OCT_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_BIN_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_PLUS)
      | (1ULL << STLanguageParser::TOKEN_MINUS)
      | (1ULL << STLanguageParser::STATEMENT_SEPARATOR)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
    setState(109);
    match(STLanguageParser::TOKEN_FOR_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Repeat_statementContext ------------------------------------------------------------------

STLanguageParser::Repeat_statementContext::Repeat_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::Repeat_statementContext::TOKEN_REPEAT() {
  return getToken(STLanguageParser::TOKEN_REPEAT, 0);
}

tree::TerminalNode* STLanguageParser::Repeat_statementContext::TOKEN_UNTIL() {
  return getToken(STLanguageParser::TOKEN_UNTIL, 0);
}

STLanguageParser::ExpressionContext* STLanguageParser::Repeat_statementContext::expression() {
  return getRuleContext<STLanguageParser::ExpressionContext>(0);
}

tree::TerminalNode* STLanguageParser::Repeat_statementContext::TOKEN_REPEAT_END() {
  return getToken(STLanguageParser::TOKEN_REPEAT_END, 0);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::Repeat_statementContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::Repeat_statementContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::Repeat_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleRepeat_statement;
}

void STLanguageParser::Repeat_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRepeat_statement(this);
}

void STLanguageParser::Repeat_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<STLanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRepeat_statement(this);
}


antlrcpp::Any STLanguageParser::Repeat_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<STLanguageVisitor*>(visitor))
    return parserVisitor->visitRepeat_statement(this);
  else
    return visitor->visitChildren(this);
}

STLanguageParser::Repeat_statementContext* STLanguageParser::repeat_statement() {
  Repeat_statementContext *_localctx = _tracker.createInstance<Repeat_statementContext>(_ctx, getState());
  enterRule(_localctx, 12, STLanguageParser::RuleRepeat_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(STLanguageParser::TOKEN_REPEAT);
    setState(113); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(112);
      statement();
      setState(115); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << STLanguageParser::TOKEN_RETURN)
      | (1ULL << STLanguageParser::TOKEN_FOR)
      | (1ULL << STLanguageParser::TOKEN_WHILE)
      | (1ULL << STLanguageParser::TOKEN_IF)
      | (1ULL << STLanguageParser::TOKEN_REPEAT)
      | (1ULL << STLanguageParser::TOKEN_CASE)
      | (1ULL << STLanguageParser::TOKEN_OPEN_BRACE)
      | (1ULL << STLanguageParser::TOKEN_HEX_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_DEC_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_OCT_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_BIN_NUMBER)
      | (1ULL << STLanguageParser::TOKEN_PLUS)
      | (1ULL << STLanguageParser::TOKEN_MINUS)
      | (1ULL << STLanguageParser::STATEMENT_SEPARATOR)
      | (1ULL << STLanguageParser::IDENTIFIER))) != 0));
    setState(117);
    match(STLanguageParser::TOKEN_UNTIL);
    setState(118);
    expression(0);
    setState(119);
    match(STLanguageParser::TOKEN_REPEAT_END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Case_statementContext ------------------------------------------------------------------

STLanguageParser::Case_statementContext::Case_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* STLanguageParser::Case_statementContext::TOKEN_CASE() {
  return getToken(STLanguageParser::TOKEN_CASE, 0);
}

STLanguageParser::VariableContext* STLanguageParser::Case_statementContext::variable() {
  return getRuleContext<STLanguageParser::VariableContext>(0);
}

tree::TerminalNode* STLanguageParser::Case_statementContext::TOKEN_OF() {
  return getToken(STLanguageParser::TOKEN_OF, 0);
}

tree::TerminalNode* STLanguageParser::Case_statementContext::TOKEN_CASE_END() {
  return getToken(STLanguageParser::TOKEN_CASE_END, 0);
}

std::vector<STLanguageParser::Token_case_labelContext *> STLanguageParser::Case_statementContext::token_case_label() {
  return getRuleContexts<STLanguageParser::Token_case_labelContext>();
}

STLanguageParser::Token_case_labelContext* STLanguageParser::Case_statementContext::token_case_label(size_t i) {
  return getRuleContext<STLanguageParser::Token_case_labelContext>(i);
}

std::vector<STLanguageParser::StatementContext *> STLanguageParser::Case_statementContext::statement() {
  return getRuleContexts<STLanguageParser::StatementContext>();
}

STLanguageParser::StatementContext* STLanguageParser::Case_statementContext::statement(size_t i) {
  return getRuleContext<STLanguageParser::StatementContext>(i);
}


size_t STLanguageParser::Case_statementContext::getRuleIndex() const {
  return STLanguageParser::RuleCase_statement;
}
